feat(integration): 完成集成测试验证 - 所有9个阶段功能正常
- 后端: 添加本地开发配置和 Chrome Extension 认证支持
- 前端: 验证客户管理、AI画像、AI话术功能
- Chrome Extension: 构建成功
- Flutter: 分析通过（仅有测试文件警告）

测试验证:
- 登录功能正常
- 客户列表显示4条记录
- 客户详情页正常
- AI画像Tab集成完成
- AI话术Drawer集成完成

注意: UserCurrentBypassFilter 仅用于本地开发环境